bubba-backend (2.1~pre44) vincent hugo; urgency=low

  * Updated deps for dhcp-client 

 -- Tor Krill <tor@excito.com>  Tue, 24 Aug 2010 17:34:38 +0200

bubba-backend (2.1~pre43) vincent; urgency=low

  * Modified preferences to match "Debian Squeeze" 

 -- PA Nilsson <pa@excito.com>  Tue, 24 Aug 2010 13:47:22 +0200

bubba-backend (2.1~pre42) vincent; urgency=low

  * Fixed "==" in ifplugd eth1-br0 script.

 -- PA Nilsson <pa@excito.com>  Tue, 24 Aug 2010 10:18:23 +0200

bubba-backend (2.1~pre41) vincent; urgency=low

  * Added "" on 'provides' in br0 init-script.
  * Changed "provides" string in br0 init-script. 

 -- PA Nilsson <pa@excito.com>  Tue, 24 Aug 2010 09:42:49 +0200

bubba-backend (2.1~pre40) vincent; urgency=low

  [ Tor Krill ]
  * Update pid path for dnsmasq in eth1br0-link script

  [ PA Nilsson ]
  * Fixed ifup-br0 script not to bail out. 

 -- PA Nilsson <pa@excito.com>  Fri, 20 Aug 2010 16:15:25 +0200

bubba-backend (2.1~pre39) vincent; urgency=low

  * Fixed FTP status indication / reload problems. (Closes:# 1502) 

 -- PA Nilsson <pa@excito.com>  Thu, 19 Aug 2010 14:29:29 +0200

bubba-backend (2.1~pre38) vincent; urgency=low

  * Fix path to hosts template file fixing /etc/hosts not being 
    updated on hostname change.

 -- Tor Krill <tor@excito.com>  Thu, 19 Aug 2010 13:01:04 +0200

bubba-backend (2.1~pre37) vincent; urgency=low

  * Setting LED notify to change color (to blink red).

 -- PA Nilsson <pa@excito.com>  Wed, 18 Aug 2010 10:47:00 +0200

bubba-backend (2.1~pre36) vincent; urgency=low

  * Added dep on uuid-runtime

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 16:33:40 +0200

bubba-backend (2.1~pre35) vincent; urgency=low

  * Correct repo

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 16:09:39 +0200

bubba-backend (2.1~pre34) lucid; urgency=low

  * Removed firewall start dependency of '$network'. (Closes: #1507) 

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 16:04:27 +0200
