@@ -19,7 +19,7 @@ override_dh_install:
 	install -m 755 debian/bubba-backend.eth1br0-link debian/bubba-backend/etc/ifplugd/action.d/eth1br0-link
 	install -m 755 debian/bubba-backend.ifup-br0 debian/bubba-backend/etc/init.d/ifup-br0
 	install -m 644 apt/apt.conf debian/bubba-backend/etc/apt/bubba-apt.conf
-	install -m 755 bubba-easyfind.hook debian/bubba-backend/etc/dhcp3/dhclient-exit-hooks.d/bubba-easyfind
-	install -m 755 samba-dhcp3.hook debian/bubba-backend/etc/dhcp3/dhclient-exit-hooks.d/samba
+	install -m 755 bubba-easyfind.hook debian/bubba-backend/etc/dhcp/dhclient-exit-hooks.d/bubba-easyfind
+	install -m 755 samba-dhcp.hook debian/bubba-backend/etc/dhcp/dhclient-exit-hooks.d/samba
 	install -m 644 dnsmasq.conf debian/bubba-backend/etc/dnsmasq.d/bubba.conf
 	$(foreach notifier, $(wildcard notifiers/*),$(call install_notifier, $(value notifier)))
